# tcgb-app

back/: Dockerfile  cf_update_sets.py  config.py  delete_all_documents.py  deploy.sh  main.py  pyproject.toml  requirements.txt
back/controllers/: cards_controller.py  collection_controller.py  limitless_tcg_controller.py  sets_controller.py
back/models/: card.py
back/routers/: __init__.py  cards.py  collection.py  sets.py
back/services/: auth.py  firestore.py
cloud_functions/update_one_piece/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cloud_functions/update_pokemon/: README.md  main.py  pyproject.toml  requirements.txt  test.html  test.py
cloud_functions/update_pokemon/services/: firestore.py  helpers.py
front/: Dockerfile  deploy.sh  package-lock.json  package.json  svelte.config.js  todo
front/src/: app.css  app.html  service-worker.js
front/src/components/: CameraButton.svelte  Card.svelte  Footer.svelte  Loading.svelte  LoadingSpinner.svelte  SaveCollectionButton.svelte
front/src/components/dialogs/: toast.svelte
front/src/lib/: auth.ts  axios.ts
front/src/lib/models/: card.ts  serie.ts  toast.ts
front/src/lib/store/: cards.ts  collection.ts  fileUpload.ts  series.ts  toast.ts
front/src/routes/: +layout.svelte  +page.svelte
front/src/routes/collections/: +page.svelte
front/src/routes/image/: +page.svelte
front/static/: manifest.json
front2/: package-lock.json  package.json
front2/src/: app.css
front2/src/lib/: api.js
front2/src/routes/: +layout.svelte  +page.svelte  Footer.svelte
(+17 files in other folders)
