[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-cloud-firestore>=2.21.0",
    "google-genai>=1.19.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]
